--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,7 @@ android {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
-    implementation 'androidx.room:room-runtime:2.5.1'
-    kapt 'androidx.room:room-compiler:2.5.1'
-    implementation 'androidx.room:room-ktx:2.5.1'
-    implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation "androidx.recyclerview:recyclerview:1.3.0"
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
