--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
+    package="com.example.divinareceita">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DivinaReceita"
-        tools:targetApi="31">
+        android:requestLegacyExternalStorage="true"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.DivinaReceita">
         <activity
             android:name=".SplashActivity"
             android:exported="true"
@@ -25,7 +26,6 @@
         <activity
             android:name=".HomeActivity"
             android:screenOrientation="locked"/>
-
     </application>
 
 </manifest>
